# Chess3D

./: CMakeLists.txt  README.md
doc/: .cproject  CMakeLists.txt  Doxyfile  Doxyfile.in
doc/UML Diagrams/Chess/: 128002.diagram  2.session  Chess.prj
doc/html/: _bishop_8hpp_source.html  _chess_piece_8hpp_source.html  _chess_piece_movement_8hpp_source.html  _chessboard_8hpp_source.html  _chessboard_field_8hpp_source.html  _chessboard_field_coordinates_8hpp_source.html  _king_8hpp_source.html  _knight_8hpp_source.html  _pawn_8hpp_source.html  _queen_8hpp_source.html  _rook_8hpp_source.html  annotated.html  class_bishop-members.html  class_bishop.html  class_chess_piece-members.html  class_chess_piece.html  class_chess_piece_movement-members.html  class_chess_piece_movement.html  class_chessboard-members.html  class_chessboard.html  class_chessboard_field.html  class_chessboard_field_coordinates-members.html  class_chessboard_field_coordinates.html  class_king-members.html  class_king.html  class_knight-members.html  class_knight.html  class_queen-members.html  class_queen.html  class_rook-members.html  class_rook.html  classes.html  dir_400757c3a0df52e783ed9699284f29ce.html  dir_4aa64b0872d36146e049722e293482e3.html  dir_555ac303dcf393d1c0f5c392f5f7bf5f.html  dir_72345776cd6700fb0dedb8f1faaa0c00.html  files.html  hierarchy.html  index.html
doc/html/search/: classes_63.js  search.js
doc/latex/: annotated.tex  class_bishop.tex  class_chess_piece.eps  class_chess_piece.tex  class_chess_piece_movement.tex  class_chessboard.tex  class_chessboard_field.tex  class_chessboard_field_coordinates.tex  class_king.tex  class_knight.tex  class_queen.eps  class_queen.tex  class_rook.tex  dir_400757c3a0df52e783ed9699284f29ce.tex  dir_4aa64b0872d36146e049722e293482e3.tex  dir_555ac303dcf393d1c0f5c392f5f7bf5f.tex  dir_72345776cd6700fb0dedb8f1faaa0c00.tex  doxygen.sty  hierarchy.tex  refman.tex
prj/: CMakeLists.txt
prj/lib/: CMakeLists.txt
prj/lib/ChessLogic/: CMakeLists.txt  CMakeLists.txt~
prj/lib/ChessLogic/inc/: Bishop.hpp  ChessPiece.hpp  ChessPieceMovement.hpp  Chessboard.hpp  ChessboardField.hpp  ChessboardFieldCoordinates.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
prj/lib/ChessLogic/src/: Bishop.cpp  ChessPiece.cpp  ChessPieceMovement.cpp  ChessboardField.cpp  ChessboardField.cpp~  ChessboardFieldCoordinates.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
prj/lib/ChessLogic/test/: CMakeLists.txt  ChessLogicMainTests.cpp  ChessboardFieldCoordinates_UnitTest.cpp  Rook_UnitTest.cpp
prj/lib/GameEngine/: CMakeLists.txt
prj/lib/GameEngine/CMakeFind/: FindAllegro.cmake
prj/lib/GameEngine/inc/: AllegroGameWindow.hpp  GameWindow.hpp
prj/lib/GameEngine/src/: Timer.cpp
prj/lib/GameEngine/src/Windows/: AllegroGameWindow.cpp
prj/lib/Utility/: CMakeLists.txt
prj/lib/Utility/CMakeFind/: FindRapidXml.cmake
prj/lib/Utility/inc/: Configuration.hpp  String.hpp
prj/lib/Utility/inc/Configuration/: ConfigParseException.hpp  ConfigurationEntry.hpp  ConfigurationManager.hpp  ConfigurationReader.hpp  XmlConfigReader.hpp
prj/lib/Utility/inc/String/: String.hpp
prj/lib/Utility/src/: String.cpp
prj/lib/Utility/src/Configuration/: ConfigParseException.cpp  ConfigurationEntry.cpp  ConfigurationManager.cpp  ConfigurationReader.cpp  XmlConfigReader.cpp
prj/lib/Utility/src/String/: String.cpp
prj/lib/Utility/test/: CMakeLists.txt  ConfigurationTest.cpp  StringTest.cpp  UtilityTestMain.cpp
prj/models/: bishop.blend1  king.blend1  king.blend2  pawn.blend1  pawn.blend2  queen.blend1  queen.blend2  rook.blend  rook.blend1  rook.blend2
prj/models/ChessPieces/: bishop.blend  king.blend  pawn.blend  queen.blend
prj/src/: main.cpp
prj/test/: CMakeLists.txt  CMakeLists.txt~  ChessboardFieldCoordinates_UnitTest.cpp
