list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeFind")
find_package(Allegro COMPONENTS main)
include_directories(allegro_INCLUDE_DIRS)
file(GLOB_RECURSE GameEngine_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
include_directories(inc)
if(UNIX)
  add_definitions(-std=c++11 -pedantic -Wall)
endif(UNIX)
add_library(GameEngine ${GameEngine_SRCS})
target_link_libraries(GameEngine ${allegro_LIBRARIES})