find_package(Boost COMPONENTS unit_test_framework REQUIRED)
enable_testing()
include_directories (${Boost_INCLUDE_DIRS} 
  ../inc)
if(UNIX)
  add_definitions(-std=c++11 -pedantic -Wall)
endif(UNIX)
file(GLOB TEST_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
foreach(testSrc ${TEST_SRCS})
  get_filename_component(testName ${testSrc} NAME_WE)
  string(REPLACE "_UnitTest" "" classSrc ${testName})
  list(APPEND TESTS ${testName})
  add_executable(${testName} ${testSrc})
  target_link_libraries(${testName} ${Boost_LIBRARIES} ChessLogic)
  add_test(${testName} ${testName})
endforeach(testSrc)